Phase2/syntax.output
State 0 conflicts: 24 shift/reduce, 1 reduce/reduce
State 9 conflicts: 1 shift/reduce
State 26 conflicts: 24 shift/reduce, 1 reduce/reduce
State 40 conflicts: 24 shift/reduce
State 55 conflicts: 24 shift/reduce
State 114 conflicts: 25 shift/reduce
State 145 conflicts: 24 shift/reduce
State 148 conflicts: 24 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts
    2        | ε

    3 stmts: stmt
    4      | stmts stmt

    5 stmt: expression ";"
    6     | ifstmt
    7     | whilestmt
    8     | forstmt
    9     | returnstmt
   10     | "break" ";"
   11     | "continue" ";"
   12     | block
   13     | funcdef
   14     | ";"
   15     | ε

   16 expression: assignexpr
   17           | term
   18           | expression "+" expression
   19           | expression "-" expression
   20           | expression "*" expression
   21           | expression "/" expression
   22           | expression "%" expression
   23           | expression "==" expression
   24           | expression "!=" expression
   25           | expression "<" expression
   26           | expression ">" expression
   27           | expression "<=" expression
   28           | expression ">=" expression
   29           | expression "and" expression
   30           | expression "or" expression

   31 term: "(" expression ")"
   32     | "-" expression
   33     | "not" expression
   34     | "++" lvalue
   35     | lvalue "++"
   36     | "--" lvalue
   37     | lvalue "--"
   38     | primary

   39 assignexpr: lvalue "=" expression

   40 primary: lvalue
   41        | call
   42        | objectdef
   43        | "(" funcdef ")"
   44        | const

   45 lvalue: ID
   46       | "local" ID
   47       | "::" ID
   48       | member

   49 member: lvalue "." ID
   50       | lvalue "[" expression "]"
   51       | call "." ID
   52       | call "[" expression "]"

   53 call: call "(" elist ")"
   54     | lvalue callsuffix
   55     | "(" funcdef ")" "(" elist ")"

   56 callsuffix: normcall
   57           | methodcall

   58 normcall: "(" elist ")"

   59 methodcall: ".." ID "(" elist ")"

   60 elist: ε
   61      | elist "," expression
   62      | expression

   63 objectdef: "[" elist "]"
   64          | "[" indexed "]"

   65 indexed: indexedelem
   66        | indexed "," indexedelem

   67 indexedelem: "{" expression ":" expression "}"

   68 $@1: ε

   69 block: "{" $@1 stmts "}"
   70      | "{" "}"

   71 funcprefix: "function" ID "("

   72 $@2: ε

   73 funcdef: funcprefix idlist ")" $@2 block

   74 $@3: ε

   75 $@4: ε

   76 funcdef: "function" "(" $@3 idlist ")" $@4 block

   77 const: INT
   78      | REAL
   79      | STRING
   80      | "nil"
   81      | TRUE
   82      | FALSE

   83 idlist: ε
   84       | ID
   85       | idlist "," ID

   86 ifprefix: "if" "(" expression ")"

   87 elseprefix: "else"

   88 ifstmt: ifprefix stmt elseprefix stmt
   89       | ifprefix stmt

   90 whileflag: "(" expression ")"

   91 startwhile: "while"

   92 $@5: ε

   93 $@6: ε

   94 loop: $@5 stmt $@6

   95 whilestmt: startwhile whileflag loop

   96 N: ε

   97 M: ε

   98 forprefix: "for" "(" elist ";" M expression ";"

   99 forstmt: forprefix N elist ")" N loop N

  100 returnstmt: "return" expression ";"
  101           | "return" ";"


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <stringConst> (258) 45 46 47 49 51 59 71 84 85
    STRING <stringConst> (259) 79
    INT <intConst> (260) 77
    REAL <realConst> (261) 78
    TRUE <boolConst> (262) 81
    FALSE <boolConst> (263) 82
    "(" (264) 31 43 53 55 58 59 71 76 86 90 98
    ")" (265) 31 43 53 55 58 59 73 76 86 90 99
    "[" (266) 50 52 63 64
    "]" (267) 50 52 63 64
    "{" (268) 67 69 70
    "}" (269) 67 69 70
    ";" (270) 5 10 11 14 98 100 101
    "," (271) 61 66 85
    ":" (272) 67
    "::" (273) 47
    "." (274) 49 51
    ".." (275) 59
    "+" (276) 18
    "-" (277) 19 32
    "*" (278) 20
    "/" (279) 21
    "++" (280) 34 35
    "--" (281) 36 37
    "%" (282) 22
    "=" (283) 39
    "==" (284) 23
    "!=" (285) 24
    "<" (286) 25
    ">" (287) 26
    "<=" (288) 27
    ">=" (289) 28
    "and" (290) 29
    "not" (291) 33
    "or" (292) 30
    "if" (293) 86
    "else" (294) 87
    "while" (295) 91
    "nil" (296) 80
    "return" (297) 100 101
    "function" (298) 71 76
    "break" (299) 10
    "continue" (300) 11
    "local" (301) 46
    "for" (302) 98
    NEGATIVE_VAL (303)
    LOWER_THAN_ELSE (304)


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    program <statement> (51)
        on left: 1 2
        on right: 0
    stmts <statement> (52)
        on left: 3 4
        on right: 1 4 69
    stmt <statement> (53)
        on left: 5 6 7 8 9 10 11 12 13 14 15
        on right: 3 4 88 89 94
    expression <exprV> (54)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
        on right: 5 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 39 50 52 61 62 67 86 90 98 100
    term <exprV> (55)
        on left: 31 32 33 34 35 36 37 38
        on right: 17
    assignexpr <exprV> (56)
        on left: 39
        on right: 16
    primary <exprV> (57)
        on left: 40 41 42 43 44
        on right: 38
    lvalue <exprV> (58)
        on left: 45 46 47 48
        on right: 34 35 36 37 39 40 49 50 54
    member <exprV> (59)
        on left: 49 50 51 52
        on right: 48
    call <exprV> (60)
        on left: 53 54 55
        on right: 41 51 52 53
    callsuffix <exprV> (61)
        on left: 56 57
        on right: 54
    normcall <exprV> (62)
        on left: 58
        on right: 56
    methodcall <exprV> (63)
        on left: 59
        on right: 57
    elist <exprV> (64)
        on left: 60 61 62
        on right: 53 55 58 59 61 63 98 99
    objectdef <exprV> (65)
        on left: 63 64
        on right: 42
    indexed <exprV> (66)
        on left: 65 66
        on right: 64 66
    indexedelem <exprV> (67)
        on left: 67
        on right: 65 66
    block <statement> (68)
        on left: 69 70
        on right: 12 73 76
    $@1 (69)
        on left: 68
        on right: 69
    funcprefix <symbol_P> (70)
        on left: 71
        on right: 73
    funcdef <symbol_P> (71)
        on left: 73 76
        on right: 13 43 55
    $@2 (72)
        on left: 72
        on right: 73
    $@3 (73)
        on left: 74
        on right: 76
    $@4 (74)
        on left: 75
        on right: 76
    const <exprV> (75)
        on left: 77 78 79 80 81 82
        on right: 44
    idlist <symbol_P> (76)
        on left: 83 84 85
        on right: 73 76 85
    ifprefix <intConst> (77)
        on left: 86
        on right: 88 89
    elseprefix <intConst> (78)
        on left: 87
        on right: 88
    ifstmt <statement> (79)
        on left: 88 89
        on right: 6
    whileflag <intConst> (80)
        on left: 90
        on right: 95
    startwhile <intConst> (81)
        on left: 91
        on right: 95
    loop <statement> (82)
        on left: 94
        on right: 95 99
    $@5 (83)
        on left: 92
        on right: 94
    $@6 (84)
        on left: 93
        on right: 94
    whilestmt <statement> (85)
        on left: 95
        on right: 7
    N <intConst> (86)
        on left: 96
        on right: 99
    M <intConst> (87)
        on left: 97
        on right: 98
    forprefix <forCnst> (88)
        on left: 98
        on right: 99
    forstmt <statement> (89)
        on left: 99
        on right: 8
    returnstmt <statement> (90)
        on left: 100 101
        on right: 9


State 0

    0 $accept: • program $end

    ID          shift, and go to state 1
    STRING      shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    TRUE        shift, and go to state 5
    FALSE       shift, and go to state 6
    "("         shift, and go to state 7
    "["         shift, and go to state 8
    "{"         shift, and go to state 9
    ";"         shift, and go to state 10
    "::"        shift, and go to state 11
    "-"         shift, and go to state 12
    "++"        shift, and go to state 13
    "--"        shift, and go to state 14
    "not"       shift, and go to state 15
    "if"        shift, and go to state 16
    "while"     shift, and go to state 17
    "nil"       shift, and go to state 18
    "return"    shift, and go to state 19
    "function"  shift, and go to state 20
    "break"     shift, and go to state 21
    "continue"  shift, and go to state 22
    "local"     shift, and go to state 23
    "for"       shift, and go to state 24

    $end        reduce using rule 2 (program)
    $end        [reduce using rule 15 (stmt)]
    ID          [reduce using rule 15 (stmt)]
    STRING      [reduce using rule 15 (stmt)]
    INT         [reduce using rule 15 (stmt)]
    REAL        [reduce using rule 15 (stmt)]
    TRUE        [reduce using rule 15 (stmt)]
    FALSE       [reduce using rule 15 (stmt)]
    "("         [reduce using rule 15 (stmt)]
    "["         [reduce using rule 15 (stmt)]
    "{"         [reduce using rule 15 (stmt)]
    ";"         [reduce using rule 15 (stmt)]
    "::"        [reduce using rule 15 (stmt)]
    "-"         [reduce using rule 15 (stmt)]
    "++"        [reduce using rule 15 (stmt)]
    "--"        [reduce using rule 15 (stmt)]
    "not"       [reduce using rule 15 (stmt)]
    "if"        [reduce using rule 15 (stmt)]
    "while"     [reduce using rule 15 (stmt)]
    "nil"       [reduce using rule 15 (stmt)]
    "return"    [reduce using rule 15 (stmt)]
    "function"  [reduce using rule 15 (stmt)]
    "break"     [reduce using rule 15 (stmt)]
    "continue"  [reduce using rule 15 (stmt)]
    "local"     [reduce using rule 15 (stmt)]
    "for"       [reduce using rule 15 (stmt)]
    $default    reduce using rule 2 (program)

    program     go to state 25
    stmts       go to state 26
    stmt        go to state 27
    expression  go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcprefix  go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifprefix    go to state 40
    ifstmt      go to state 41
    startwhile  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    forstmt     go to state 45
    returnstmt  go to state 46


State 1

   45 lvalue: ID •

    $default  reduce using rule 45 (lvalue)


State 2

   79 const: STRING •

    $default  reduce using rule 79 (const)


State 3

   77 const: INT •

    $default  reduce using rule 77 (const)


State 4

   78 const: REAL •

    $default  reduce using rule 78 (const)


State 5

   81 const: TRUE •

    $default  reduce using rule 81 (const)


State 6

   82 const: FALSE •

    $default  reduce using rule 82 (const)


State 7

   31 term: "(" • expression ")"
   43 primary: "(" • funcdef ")"
   55 call: "(" • funcdef ")" "(" elist ")"

    ID          shift, and go to state 1
    STRING      shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    TRUE        shift, and go to state 5
    FALSE       shift, and go to state 6
    "("         shift, and go to state 7
    "["         shift, and go to state 8
    "::"        shift, and go to state 11
    "-"         shift, and go to state 12
    "++"        shift, and go to state 13
    "--"        shift, and go to state 14
    "not"       shift, and go to state 15
    "nil"       shift, and go to state 18
    "function"  shift, and go to state 20
    "local"     shift, and go to state 23

    expression  go to state 47
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    funcprefix  go to state 37
    funcdef     go to state 48
    const       go to state 39


State 8

   63 objectdef: "[" • elist "]"
   64          | "[" • indexed "]"

    ID       shift, and go to state 1
    STRING   shift, and go to state 2
    INT      shift, and go to state 3
    REAL     shift, and go to state 4
    TRUE     shift, and go to state 5
    FALSE    shift, and go to state 6
    "("      shift, and go to state 7
    "["      shift, and go to state 8
    "{"      shift, and go to state 49
    "::"     shift, and go to state 11
    "-"      shift, and go to state 12
    "++"     shift, and go to state 13
    "--"     shift, and go to state 14
    "not"    shift, and go to state 15
    "nil"    shift, and go to state 18
    "local"  shift, and go to state 23

    $default  reduce using rule 60 (elist)

    expression   go to state 50
    term         go to state 29
    assignexpr   go to state 30
    primary      go to state 31
    lvalue       go to state 32
    member       go to state 33
    call         go to state 34
    elist        go to state 51
    objectdef    go to state 35
    indexed      go to state 52
    indexedelem  go to state 53
    const        go to state 39


State 9

   69 block: "{" • $@1 stmts "}"
   70      | "{" • "}"

    "}"  shift, and go to state 54

    "}"       [reduce using rule 68 ($@1)]
    $default  reduce using rule 68 ($@1)

    $@1  go to state 55


State 10

   14 stmt: ";" •

    $default  reduce using rule 14 (stmt)


State 11

   47 lvalue: "::" • ID

    ID  shift, and go to state 56


State 12

   32 term: "-" • expression

    ID       shift, and go to state 1
    STRING   shift, and go to state 2
    INT      shift, and go to state 3
    REAL     shift, and go to state 4
    TRUE     shift, and go to state 5
    FALSE    shift, and go to state 6
    "("      shift, and go to state 7
    "["      shift, and go to state 8
    "::"     shift, and go to state 11
    "-"      shift, and go to state 12
    "++"     shift, and go to state 13
    "--"     shift, and go to state 14
    "not"    shift, and go to state 15
    "nil"    shift, and go to state 18
    "local"  shift, and go to state 23

    expression  go to state 57
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 13

   34 term: "++" • lvalue

    ID       shift, and go to state 1
    "("      shift, and go to state 58
    "::"     shift, and go to state 11
    "local"  shift, and go to state 23

    lvalue  go to state 59
    member  go to state 33
    call    go to state 60


State 14

   36 term: "--" • lvalue

    ID       shift, and go to state 1
    "("      shift, and go to state 58
    "::"     shift, and go to state 11
    "local"  shift, and go to state 23

    lvalue  go to state 61
    member  go to state 33
    call    go to state 60


State 15

   33 term: "not" • expression

    ID       shift, and go to state 1
    STRING   shift, and go to state 2
    INT      shift, and go to state 3
    REAL     shift, and go to state 4
    TRUE     shift, and go to state 5
    FALSE    shift, and go to state 6
    "("      shift, and go to state 7
    "["      shift, and go to state 8
    "::"     shift, and go to state 11
    "-"      shift, and go to state 12
    "++"     shift, and go to state 13
    "--"     shift, and go to state 14
    "not"    shift, and go to state 15
    "nil"    shift, and go to state 18
    "local"  shift, and go to state 23

    expression  go to state 62
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 16

   86 ifprefix: "if" • "(" expression ")"

    "("  shift, and go to state 63


State 17

   91 startwhile: "while" •

    $default  reduce using rule 91 (startwhile)


State 18

   80 const: "nil" •

    $default  reduce using rule 80 (const)


State 19

  100 returnstmt: "return" • expression ";"
  101           | "return" • ";"

    ID       shift, and go to state 1
    STRING   shift, and go to state 2
    INT      shift, and go to state 3
    REAL     shift, and go to state 4
    TRUE     shift, and go to state 5
    FALSE    shift, and go to state 6
    "("      shift, and go to state 7
    "["      shift, and go to state 8
    ";"      shift, and go to state 64
    "::"     shift, and go to state 11
    "-"      shift, and go to state 12
    "++"     shift, and go to state 13
    "--"     shift, and go to state 14
    "not"    shift, and go to state 15
    "nil"    shift, and go to state 18
    "local"  shift, and go to state 23

    expression  go to state 65
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 20

   71 funcprefix: "function" • ID "("
   76 funcdef: "function" • "(" $@3 idlist ")" $@4 block

    ID   shift, and go to state 66
    "("  shift, and go to state 67


State 21

   10 stmt: "break" • ";"

    ";"  shift, and go to state 68


State 22

   11 stmt: "continue" • ";"

    ";"  shift, and go to state 69


State 23

   46 lvalue: "local" • ID

    ID  shift, and go to state 70


State 24

   98 forprefix: "for" • "(" elist ";" M expression ";"

    "("  shift, and go to state 71


State 25

    0 $accept: program • $end

    $end  shift, and go to state 72


State 26

    1 program: stmts •
    4 stmts: stmts • stmt

    ID          shift, and go to state 1
    STRING      shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    TRUE        shift, and go to state 5
    FALSE       shift, and go to state 6
    "("         shift, and go to state 7
    "["         shift, and go to state 8
    "{"         shift, and go to state 9
    ";"         shift, and go to state 10
    "::"        shift, and go to state 11
    "-"         shift, and go to state 12
    "++"        shift, and go to state 13
    "--"        shift, and go to state 14
    "not"       shift, and go to state 15
    "if"        shift, and go to state 16
    "while"     shift, and go to state 17
    "nil"       shift, and go to state 18
    "return"    shift, and go to state 19
    "function"  shift, and go to state 20
    "break"     shift, and go to state 21
    "continue"  shift, and go to state 22
    "local"     shift, and go to state 23
    "for"       shift, and go to state 24

    $end        reduce using rule 1 (program)
    $end        [reduce using rule 15 (stmt)]
    ID          [reduce using rule 15 (stmt)]
    STRING      [reduce using rule 15 (stmt)]
    INT         [reduce using rule 15 (stmt)]
    REAL        [reduce using rule 15 (stmt)]
    TRUE        [reduce using rule 15 (stmt)]
    FALSE       [reduce using rule 15 (stmt)]
    "("         [reduce using rule 15 (stmt)]
    "["         [reduce using rule 15 (stmt)]
    "{"         [reduce using rule 15 (stmt)]
    ";"         [reduce using rule 15 (stmt)]
    "::"        [reduce using rule 15 (stmt)]
    "-"         [reduce using rule 15 (stmt)]
    "++"        [reduce using rule 15 (stmt)]
    "--"        [reduce using rule 15 (stmt)]
    "not"       [reduce using rule 15 (stmt)]
    "if"        [reduce using rule 15 (stmt)]
    "while"     [reduce using rule 15 (stmt)]
    "nil"       [reduce using rule 15 (stmt)]
    "return"    [reduce using rule 15 (stmt)]
    "function"  [reduce using rule 15 (stmt)]
    "break"     [reduce using rule 15 (stmt)]
    "continue"  [reduce using rule 15 (stmt)]
    "local"     [reduce using rule 15 (stmt)]
    "for"       [reduce using rule 15 (stmt)]
    $default    reduce using rule 1 (program)

    stmt        go to state 73
    expression  go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcprefix  go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifprefix    go to state 40
    ifstmt      go to state 41
    startwhile  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    forstmt     go to state 45
    returnstmt  go to state 46


State 27

    3 stmts: stmt •

    $default  reduce using rule 3 (stmts)


State 28

    5 stmt: expression • ";"
   18 expression: expression • "+" expression
   19           | expression • "-" expression
   20           | expression • "*" expression
   21           | expression • "/" expression
   22           | expression • "%" expression
   23           | expression • "==" expression
   24           | expression • "!=" expression
   25           | expression • "<" expression
   26           | expression • ">" expression
   27           | expression • "<=" expression
   28           | expression • ">=" expression
   29           | expression • "and" expression
   30           | expression • "or" expression

    ";"    shift, and go to state 74
    "+"    shift, and go to state 75
    "-"    shift, and go to state 76
    "*"    shift, and go to state 77
    "/"    shift, and go to state 78
    "%"    shift, and go to state 79
    "=="   shift, and go to state 80
    "!="   shift, and go to state 81
    "<"    shift, and go to state 82
    ">"    shift, and go to state 83
    "<="   shift, and go to state 84
    ">="   shift, and go to state 85
    "and"  shift, and go to state 86
    "or"   shift, and go to state 87


State 29

   17 expression: term •

    $default  reduce using rule 17 (expression)


State 30

   16 expression: assignexpr •

    $default  reduce using rule 16 (expression)


State 31

   38 term: primary •

    $default  reduce using rule 38 (term)


State 32

   35 term: lvalue • "++"
   37     | lvalue • "--"
   39 assignexpr: lvalue • "=" expression
   40 primary: lvalue •
   49 member: lvalue • "." ID
   50       | lvalue • "[" expression "]"
   54 call: lvalue • callsuffix

    "("   shift, and go to state 88
    "["   shift, and go to state 89
    "."   shift, and go to state 90
    ".."  shift, and go to state 91
    "++"  shift, and go to state 92
    "--"  shift, and go to state 93
    "="   shift, and go to state 94

    $default  reduce using rule 40 (primary)

    callsuffix  go to state 95
    normcall    go to state 96
    methodcall  go to state 97


State 33

   48 lvalue: member •

    $default  reduce using rule 48 (lvalue)


State 34

   41 primary: call •
   51 member: call • "." ID
   52       | call • "[" expression "]"
   53 call: call • "(" elist ")"

    "("  shift, and go to state 98
    "["  shift, and go to state 99
    "."  shift, and go to state 100

    $default  reduce using rule 41 (primary)


State 35

   42 primary: objectdef •

    $default  reduce using rule 42 (primary)


State 36

   12 stmt: block •

    $default  reduce using rule 12 (stmt)


State 37

   73 funcdef: funcprefix • idlist ")" $@2 block

    ID  shift, and go to state 101

    $default  reduce using rule 83 (idlist)

    idlist  go to state 102


State 38

   13 stmt: funcdef •

    $default  reduce using rule 13 (stmt)


State 39

   44 primary: const •

    $default  reduce using rule 44 (primary)


State 40

   88 ifstmt: ifprefix • stmt elseprefix stmt
   89       | ifprefix • stmt

    ID          shift, and go to state 1
    STRING      shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    TRUE        shift, and go to state 5
    FALSE       shift, and go to state 6
    "("         shift, and go to state 7
    "["         shift, and go to state 8
    "{"         shift, and go to state 9
    ";"         shift, and go to state 10
    "::"        shift, and go to state 11
    "-"         shift, and go to state 12
    "++"        shift, and go to state 13
    "--"        shift, and go to state 14
    "not"       shift, and go to state 15
    "if"        shift, and go to state 16
    "while"     shift, and go to state 17
    "nil"       shift, and go to state 18
    "return"    shift, and go to state 19
    "function"  shift, and go to state 20
    "break"     shift, and go to state 21
    "continue"  shift, and go to state 22
    "local"     shift, and go to state 23
    "for"       shift, and go to state 24

    ID          [reduce using rule 15 (stmt)]
    STRING      [reduce using rule 15 (stmt)]
    INT         [reduce using rule 15 (stmt)]
    REAL        [reduce using rule 15 (stmt)]
    TRUE        [reduce using rule 15 (stmt)]
    FALSE       [reduce using rule 15 (stmt)]
    "("         [reduce using rule 15 (stmt)]
    "["         [reduce using rule 15 (stmt)]
    "{"         [reduce using rule 15 (stmt)]
    ";"         [reduce using rule 15 (stmt)]
    "::"        [reduce using rule 15 (stmt)]
    "-"         [reduce using rule 15 (stmt)]
    "++"        [reduce using rule 15 (stmt)]
    "--"        [reduce using rule 15 (stmt)]
    "not"       [reduce using rule 15 (stmt)]
    "if"        [reduce using rule 15 (stmt)]
    "while"     [reduce using rule 15 (stmt)]
    "nil"       [reduce using rule 15 (stmt)]
    "return"    [reduce using rule 15 (stmt)]
    "function"  [reduce using rule 15 (stmt)]
    "break"     [reduce using rule 15 (stmt)]
    "continue"  [reduce using rule 15 (stmt)]
    "local"     [reduce using rule 15 (stmt)]
    "for"       [reduce using rule 15 (stmt)]
    $default    reduce using rule 15 (stmt)

    stmt        go to state 103
    expression  go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcprefix  go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifprefix    go to state 40
    ifstmt      go to state 41
    startwhile  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    forstmt     go to state 45
    returnstmt  go to state 46


State 41

    6 stmt: ifstmt •

    $default  reduce using rule 6 (stmt)


State 42

   95 whilestmt: startwhile • whileflag loop

    "("  shift, and go to state 104

    whileflag  go to state 105


State 43

    7 stmt: whilestmt •

    $default  reduce using rule 7 (stmt)


State 44

   99 forstmt: forprefix • N elist ")" N loop N

    $default  reduce using rule 96 (N)

    N  go to state 106


State 45

    8 stmt: forstmt •

    $default  reduce using rule 8 (stmt)


State 46

    9 stmt: returnstmt •

    $default  reduce using rule 9 (stmt)


State 47

   18 expression: expression • "+" expression
   19           | expression • "-" expression
   20           | expression • "*" expression
   21           | expression • "/" expression
   22           | expression • "%" expression
   23           | expression • "==" expression
   24           | expression • "!=" expression
   25           | expression • "<" expression
   26           | expression • ">" expression
   27           | expression • "<=" expression
   28           | expression • ">=" expression
   29           | expression • "and" expression
   30           | expression • "or" expression
   31 term: "(" expression • ")"

    ")"    shift, and go to state 107
    "+"    shift, and go to state 75
    "-"    shift, and go to state 76
    "*"    shift, and go to state 77
    "/"    shift, and go to state 78
    "%"    shift, and go to state 79
    "=="   shift, and go to state 80
    "!="   shift, and go to state 81
    "<"    shift, and go to state 82
    ">"    shift, and go to state 83
    "<="   shift, and go to state 84
    ">="   shift, and go to state 85
    "and"  shift, and go to state 86
    "or"   shift, and go to state 87


State 48

   43 primary: "(" funcdef • ")"
   55 call: "(" funcdef • ")" "(" elist ")"

    ")"  shift, and go to state 108


State 49

   67 indexedelem: "{" • expression ":" expression "}"

    ID       shift, and go to state 1
    STRING   shift, and go to state 2
    INT      shift, and go to state 3
    REAL     shift, and go to state 4
    TRUE     shift, and go to state 5
    FALSE    shift, and go to state 6
    "("      shift, and go to state 7
    "["      shift, and go to state 8
    "::"     shift, and go to state 11
    "-"      shift, and go to state 12
    "++"     shift, and go to state 13
    "--"     shift, and go to state 14
    "not"    shift, and go to state 15
    "nil"    shift, and go to state 18
    "local"  shift, and go to state 23

    expression  go to state 109
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 50

   18 expression: expression • "+" expression
   19           | expression • "-" expression
   20           | expression • "*" expression
   21           | expression • "/" expression
   22           | expression • "%" expression
   23           | expression • "==" expression
   24           | expression • "!=" expression
   25           | expression • "<" expression
   26           | expression • ">" expression
   27           | expression • "<=" expression
   28           | expression • ">=" expression
   29           | expression • "and" expression
   30           | expression • "or" expression
   62 elist: expression •

    "+"    shift, and go to state 75
    "-"    shift, and go to state 76
    "*"    shift, and go to state 77
    "/"    shift, and go to state 78
    "%"    shift, and go to state 79
    "=="   shift, and go to state 80
    "!="   shift, and go to state 81
    "<"    shift, and go to state 82
    ">"    shift, and go to state 83
    "<="   shift, and go to state 84
    ">="   shift, and go to state 85
    "and"  shift, and go to state 86
    "or"   shift, and go to state 87

    $default  reduce using rule 62 (elist)


State 51

   61 elist: elist • "," expression
   63 objectdef: "[" elist • "]"

    "]"  shift, and go to state 110
    ","  shift, and go to state 111


State 52

   64 objectdef: "[" indexed • "]"
   66 indexed: indexed • "," indexedelem

    "]"  shift, and go to state 112
    ","  shift, and go to state 113


State 53

   65 indexed: indexedelem •

    $default  reduce using rule 65 (indexed)


State 54

   70 block: "{" "}" •

    $default  reduce using rule 70 (block)


State 55

   69 block: "{" $@1 • stmts "}"

    ID          shift, and go to state 1
    STRING      shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    TRUE        shift, and go to state 5
    FALSE       shift, and go to state 6
    "("         shift, and go to state 7
    "["         shift, and go to state 8
    "{"         shift, and go to state 9
    ";"         shift, and go to state 10
    "::"        shift, and go to state 11
    "-"         shift, and go to state 12
    "++"        shift, and go to state 13
    "--"        shift, and go to state 14
    "not"       shift, and go to state 15
    "if"        shift, and go to state 16
    "while"     shift, and go to state 17
    "nil"       shift, and go to state 18
    "return"    shift, and go to state 19
    "function"  shift, and go to state 20
    "break"     shift, and go to state 21
    "continue"  shift, and go to state 22
    "local"     shift, and go to state 23
    "for"       shift, and go to state 24

    ID          [reduce using rule 15 (stmt)]
    STRING      [reduce using rule 15 (stmt)]
    INT         [reduce using rule 15 (stmt)]
    REAL        [reduce using rule 15 (stmt)]
    TRUE        [reduce using rule 15 (stmt)]
    FALSE       [reduce using rule 15 (stmt)]
    "("         [reduce using rule 15 (stmt)]
    "["         [reduce using rule 15 (stmt)]
    "{"         [reduce using rule 15 (stmt)]
    ";"         [reduce using rule 15 (stmt)]
    "::"        [reduce using rule 15 (stmt)]
    "-"         [reduce using rule 15 (stmt)]
    "++"        [reduce using rule 15 (stmt)]
    "--"        [reduce using rule 15 (stmt)]
    "not"       [reduce using rule 15 (stmt)]
    "if"        [reduce using rule 15 (stmt)]
    "while"     [reduce using rule 15 (stmt)]
    "nil"       [reduce using rule 15 (stmt)]
    "return"    [reduce using rule 15 (stmt)]
    "function"  [reduce using rule 15 (stmt)]
    "break"     [reduce using rule 15 (stmt)]
    "continue"  [reduce using rule 15 (stmt)]
    "local"     [reduce using rule 15 (stmt)]
    "for"       [reduce using rule 15 (stmt)]
    $default    reduce using rule 15 (stmt)

    stmts       go to state 114
    stmt        go to state 27
    expression  go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcprefix  go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifprefix    go to state 40
    ifstmt      go to state 41
    startwhile  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    forstmt     go to state 45
    returnstmt  go to state 46


State 56

   47 lvalue: "::" ID •

    $default  reduce using rule 47 (lvalue)


State 57

   18 expression: expression • "+" expression
   19           | expression • "-" expression
   20           | expression • "*" expression
   21           | expression • "/" expression
   22           | expression • "%" expression
   23           | expression • "==" expression
   24           | expression • "!=" expression
   25           | expression • "<" expression
   26           | expression • ">" expression
   27           | expression • "<=" expression
   28           | expression • ">=" expression
   29           | expression • "and" expression
   30           | expression • "or" expression
   32 term: "-" expression •

    $default  reduce using rule 32 (term)


State 58

   55 call: "(" • funcdef ")" "(" elist ")"

    "function"  shift, and go to state 20

    funcprefix  go to state 37
    funcdef     go to state 115


State 59

   34 term: "++" lvalue •
   49 member: lvalue • "." ID
   50       | lvalue • "[" expression "]"
   54 call: lvalue • callsuffix

    "("   shift, and go to state 88
    "["   shift, and go to state 89
    "."   shift, and go to state 90
    ".."  shift, and go to state 91

    $default  reduce using rule 34 (term)

    callsuffix  go to state 95
    normcall    go to state 96
    methodcall  go to state 97


State 60

   51 member: call • "." ID
   52       | call • "[" expression "]"
   53 call: call • "(" elist ")"

    "("  shift, and go to state 98
    "["  shift, and go to state 99
    "."  shift, and go to state 100


State 61

   36 term: "--" lvalue •
   49 member: lvalue • "." ID
   50       | lvalue • "[" expression "]"
   54 call: lvalue • callsuffix

    "("   shift, and go to state 88
    "["   shift, and go to state 89
    "."   shift, and go to state 90
    ".."  shift, and go to state 91

    $default  reduce using rule 36 (term)

    callsuffix  go to state 95
    normcall    go to state 96
    methodcall  go to state 97


State 62

   18 expression: expression • "+" expression
   19           | expression • "-" expression
   20           | expression • "*" expression
   21           | expression • "/" expression
   22           | expression • "%" expression
   23           | expression • "==" expression
   24           | expression • "!=" expression
   25           | expression • "<" expression
   26           | expression • ">" expression
   27           | expression • "<=" expression
   28           | expression • ">=" expression
   29           | expression • "and" expression
   30           | expression • "or" expression
   33 term: "not" expression •

    $default  reduce using rule 33 (term)


State 63

   86 ifprefix: "if" "(" • expression ")"
